# aeqts_qubo

./: .clangd  .gitignore  CMakeLists.txt  README.md  aeqts_qubo_cuda.cu  build_run.bat
.github/workflows/: build.yml  build_cuda_aware_mpi.yml  build_hip.yml
config/: case.conf  case.toml
docs/: issue.md  performance.md  plan-b-population-split.md  rocprofv3.md
docs/rocm/: profiling.md
include/: config.h  qubo_matrix.h  solver.h
script/: build_run.sh
script/origin/: build_run.bat
script/rocm/: build.sh
script/slurm/: cuda.slurm  hip.slurm  run.slurm
script/slurm/nano4/: build_mpi.slurm  mpi.slurm  run_mpi.slurm
scripts/: fold_to_flamegraph.py  profile_counters.sh  summarize_counters.py  validate_perf.py
src/: aeqts_qubo.cu  aeqts_qubo.hip  kernels.cu  kernels.cuh  main.cpp  main.cu  main.hip  qubo_matrix.cpp
src/1gpu/: main.cu
src/cuda/: kernels.cuh  solver.cu
src/hip/: kernels.hip  kernels.hpp  main.hip  solver.hip
src/origin/: aeqts_qubo.cu  aeqts_qubo.hip
test/: CMakeLists.txt  test_config.cpp  test_framework.h  test_qubo_matrix.cpp
